--- a/Web.Automation.SpecFlow/Web.Automation.SpecFlow/packages.config
+++ b/Web.Automation.SpecFlow/Web.Automation.SpecFlow/packages.config
@@ -5,7 +5,9 @@
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.23.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.ChromeDriver" version="73.0.3683.68" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.1" targetFramework="net461" />
   <package id="SpecRun.Runner" version="1.8.5" targetFramework="net461" />
   <package id="SpecRun.SpecFlow" version="1.8.5" targetFramework="net461" />
